# Phase_identification_refinement

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt  spacegroup_crystal-system_accuracy_analysis.py
configs/: refinement.example.yaml  stage1.example.yaml  stage2.example.yaml
data/: README.md  match.txt
data/Exp_data/: R040009.csv  R040009_CIF.txt  R040011.csv  R040011_CIF.txt  R040017.csv  R040017_CIF.txt  R040030.csv  R040030_CIF.txt  R040050.csv  R040050_CIF.txt  R040054.csv  R040054_CIF.txt  R040069.csv  R040069_CIF.txt  R040072.csv  R040072_CIF.txt  R040089.csv  R040089_CIF.txt  R040093.csv  R040093_CIF.txt  R040096.csv  R040096_CIF.txt  R040117.csv  R040117_CIF.txt  R040126.csv  R040126_CIF.txt  R040136.csv  R040136_CIF.txt  R040141.csv  R040141_CIF.txt  R040182.csv  R040182_CIF.txt  R040184.csv  R040184_CIF.txt  R050005.csv  R050005_CIF.txt  R050011.csv  R050011_CIF.txt  R050016.csv  R050016_CIF.txt  (+404 more)
docs/: ARTIFACTS_SHA256SUMS.txt  DATA.md  OPEN_SOURCE_CLEANUP.md  REFINEMENT.md
examples/: xrd_demo_data.csv
examples/mini_exp_data/: README.md
scripts/: build_rruff_data.py
src/single_phase_xrd_identification/common/: dataset.py  dataset_real.py  model.py  serialization.py
src/single_phase_xrd_identification/refinement/: build_rruff_data.py  xrd_refinement.py
src/single_phase_xrd_identification/stage1/: spacegroup_crystal-system_accuracy_analysis.py  train.py  verify.py
tests/: README.md  test_build_rruff_data.py
(+4 files in other folders)
